--- a/client/src/components/Messenger/ContactsMessage/ContactsMessage.css
+++ b/client/src/components/Messenger/ContactsMessage/ContactsMessage.css
@@ -1,21 +1,13 @@
-.messages{
-    display: flex;
-    flex-direction: column;
-    overflow-y: auto;
-    height: 95%;
+.message {
+  margin-bottom: 15px;
 }
-.message-text{
-    background: #011627;
-    color: white;
-    padding: 10px 10px;
-    border-radius: 10px;
+.message-body {
+  max-width: 80%;
+  display: inline-block;
+  padding: 20px;
+  background-color: #eee;
+  border: 1px;
+  border-radius: 5px;
+  padding-right: 50px;
 }
-.message-body{
-    padding-left: 10px;
-    }
 
-img{
-    width: 20px;
-     height: 20px;
-    border-radius: 50%;
-}
