--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -1,9 +1,19 @@
-ul {
+@import url('https://fonts.googleapis.com/css?family=Lobster');
+
+.nav-bar {
   display: flex;
   justify-content: space-evenly;
   list-style-type: none;
+  background-color: steelblue ;
+  font-family: 'Lobster', cursive;
+  font-size: 1.5em;  
+  color: black;
+  padding-bottom: 10px;
 }
 
-.navbar{
-  
+.nav-header{
+  background-color: steelblue;    
+  font-family: 'Lobster', cursive;
+  font-size: 2.5em;
+  padding-left: 1em;
 }
