--- a/client/src/components/Messenger/Messenger.css
+++ b/client/src/components/Messenger/Messenger.css
@@ -10,14 +10,18 @@ body {
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-areas: "sidebar main";
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 #main {
     grid-area: main;
     /* border: 4px solid rgb(83, 83, 235); */
     border-radius: 2px;
-    background-color: rgb(216, 150, 112);
+    background-color: #FF9F1C;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
 }
 #messages-list {
     padding: 5px 0 0 5px;
@@ -27,7 +31,7 @@ body {
     padding: 5px 0 0 5px;
     /* border-right: 1px solid #3f3f3f; */
     height: 100%;
-    border: 4px solid rgb(216, 112, 138);
+    border: 4px solid #FDFFFC;
     border-radius: 2px;
-    background-color: rgb(243, 221, 146);
+    background-color: #E71D36;
 }
