--- a/client/src/components/Messenger/WatsonMessage/WatsonMessage.css
+++ b/client/src/components/Messenger/WatsonMessage/WatsonMessage.css
@@ -3,14 +3,19 @@
   display: flex;
   flex-direction: row-reverse;
   
+  
 
 }
-.message-body {
+.watson-message-body {
   max-width: 80%;
   display: inline-block;
   padding: 20px;
-  background-color: #eee;
   border: 1px;
   border-radius: 5px;
   padding-right: 50px;
+  background-color: #2EC4B6;
+  color: #FDFFFC;
+  padding: 10px;
+  padding-right: 10px;
+  box-shadow: 4px 8px #888888;
 }
