--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -4,16 +4,21 @@
   display: flex;
   justify-content: space-evenly;
   list-style-type: none;
-  background-color: steelblue ;
+  background-color: #011627 ;
   font-family: 'Lobster', cursive;
-  font-size: 1.5em;  
-  color: black;
+  font-size: 1.8em;  
+  color: #FDFFFC;
   padding-bottom: 10px;
 }
 
 .nav-header{
-  background-color: steelblue;    
+  background-color: #011627;    
   font-family: 'Lobster', cursive;
-  font-size: 2.5em;
+  font-size: 2.8em;
   padding-left: 1em;
+  color: #FDFFFC;  
+}
+
+.nav-bar li{
+  color: #FDFFFC;  
 }
