--- a/client/src/components/Messenger/WatsonMessage/WatsonMessage.css
+++ b/client/src/components/Messenger/WatsonMessage/WatsonMessage.css
@@ -2,7 +2,7 @@
   margin-bottom: 15px;
   display: flex;
   flex-direction: row-reverse;
-  
+  margin-right: 20px;
   
 
 }
@@ -16,6 +16,6 @@
   background-color: #2EC4B6;
   color: #FDFFFC;
   padding: 10px;
-  padding-right: 10px;
+  padding-right: 50px;
   box-shadow: 4px 8px #888888;
 }
